# heckfallers

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
client/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
client/src/: controls.ts  events_panel.ts  hex.ts  main.ts  params_panel.ts  render.ts  state.ts  styles.css
docs/: conquer-salient-redesign.md  player-allocation-and-completion-pressure.md
server/: Dockerfile  main.py
server/api/: controls.py  serialize.py  ws.py
server/bench/: headless.py  sweep.py
server/scenarios/: demo_planet.json
server/sim/: cell.py  enemy_ai.py  events.py  factory.py  grid.py  params.py  poi.py  salient.py  scenarios.py  se_ai.py  supply.py  world.py
server/sim/controllers/: __init__.py  high_command.py  opportunistic.py
server/tests/: conftest.py  test_controllers.py  test_factory.py  test_high_command.py  test_pressure_model.py  test_retaliation.py  test_salient.py  test_se_ai.py
