[project]
name = "hexa-server"
version = "0.0.1"
description = "Hex War Sim — proof-of-concept backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "websockets>=13",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["server/tests"]
addopts = "-q"
